Fix hidden overflow on reference form controls

--- a/sites/all/themes/mukurtu_starter/css/style.css
+++ b/sites/all/themes/mukurtu_starter/css/style.css
@@ -10605,3 +10605,7 @@ a:hover {
   border-top-style: solid;
   border-top-width: 1px;
 }
+.table-responsive {
+  overflow-x: visible !important;
+  overflow-y: visible !important;
+}
