--- a/sites/all/themes/mukurtu_starter/less/content.less
+++ b/sites/all/themes/mukurtu_starter/less/content.less
@@ -1159,3 +1159,8 @@ a.tooltips span {
     border-top-style: solid;
     border-top-width: 1px;
 }
+
+.table-responsive {
+   overflow-x: visible !important;
+   overflow-y: visible !important;
+}
